# serde-fressian

./: .gitignore  Cargo.toml  README.md
doc/: types.md
serde-fressian-wasm-api/src/: lib.rs
serde-fressian-wasm-demo/: Cargo.toml
serde-fressian-wasm-demo/src/: lib.rs
src/: de.rs  error.rs  inst.rs  lib.rs  ser.rs  types.rs  wasm.rs
src/imp/: Codes.rs  RawInput.rs  RawOutput.rs  adler.rs  byte_reader.rs  cache.rs  codes.rs  error.rs  io.rs  mod.rs  ranges.rs  rawinput.rs  rawoutput.rs
src/value/: de.rs  mod.rs  ser.rs
src/wasm/: mod.rs
tests/: prims.rs  rt.rs  ser_test.rs  types_test.rs  value_tests.rs
