[package]
name = "serde-fressian"
version = "0.1.0"
authors = ["Patrick Killean <pat.killean@gmail.com>"]
description = "Fressian for rust/wasm"
keywords = [
    "clojure",
    "clojurescript",
    "wasm"
]
license = "Apache-2.0/MIT"
readme = "./README.md"
repository = "https://github.com/pkpkpk/serde-fressian"

[dependencies]
serde_json = "1.0" # https://github.com/rust-lang/cargo/issues/1982
serde = "1.0.71"
serde_derive = "1.0.70"
serde_bytes = "0.10.4"
itertools = "0.7.3"
byteorder = "1.2.3"
ordered-float = {version= "0.5", features = ["serde"]}
shrinkwraprs = "0.2.0"
chrono = "0.4"
uuid = "0.6"
regex = "1"
url = "1.7.1"

[dev-dependencies]
quickcheck = "0.5.0"
[profile.release]
debug = true
